--- a/.github/workflows/generate-shop.yml
+++ b/.github/workflows/generate-shop.yml
@@ -1,1 +1,31 @@
+name: 🎵 Auto Shop Musique
+on:
+  push:
+    paths:
+      - 'assets/**'
+      - 'index.html'
+      - 'generate-shop.js'
+  workflow_dispatch:
+
+jobs:
+  generate:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+    
+    - name: Generate boutique
+      run: |
+        ls -la
+        node generate-shop.js
+    
+    - name: Commit changements
+      uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: "🤖 Shop auto-généré"
+        file_pattern: index.html
 
