--- a/.github/workflows/generate-shop.yml
+++ b/.github/workflows/generate-shop.yml
@@ -1,1 +1,21 @@
+name: 🎵 Shop Musique Auto
+on: [push, workflow_dispatch]
 
+jobs:
+  generate:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: 'off'  # FIX cache
+    
+    - name: Generate
+      run: node generate-shop.js
+    
+    - name: Vérification
+      run: |
+        ls -la index.html assets/ || echo "OK"
