--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/votreusername/shop02.git"
+    "url": "https://github.com/dbpgrok/shop02.git"
   }
 }
