--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -19,4 +19,4 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "🤖 Auto-generate shop ({{ github.event.head_commit.message }})"
-          file_pattern: ['index.html', 'index.backup.html']
+          file_pattern: ['index.html']
